--- a/a1_task2_moore_peyton.Rmd
+++ b/a1_task2_moore_peyton.Rmd
@@ -6,5 +6,57 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, warning=FALSE, message=FALSE)
 ```
+
+
+```{r Load necessary packages }
+library(tidyverse)
+library(janitor)
+library(ggfortify)
+library(here)
+library(viridis)
+
+```
+
+```{r Read in data }
+
+world_env <- read_csv(here::here("data", "world_env_vars.csv")) %>% 
+  clean_names() %>% 
+  select( country, elevation, cropland_cover, tree_canopy_cover, isothermality, rain_mean_annual, temp_mean_annual, wind, cloudiness) %>% 
+  drop_na()
+
+world_pca <- world_env %>% 
+  select(-country) %>% 
+  scale() %>% 
+  prcomp()
+  
+
+```
+
+```{r PCA analysis }
+
+autoplot(world_pca, 
+         data = world_env, 
+         loadings = TRUE,
+         colour = 'temp_mean_annual', 
+         loadings.label = TRUE,
+         loadings.colour = "gray",
+         loadings.label.colour = "black", 
+         loadings.label.vjust = -0.5, 
+         alpha = 0.5)+
+  scale_colour_viridis(option = "B") +
+  theme_minimal()+
+  labs(title = "PCA Bi-Plot of World Environmental Data")
+
+
+screeplot(world_pca, type = "lines")
+
+
+world_pca$rotation
+
+
+
+
+```
+
